feat: transform data using spark with minio as storage

--- a/download.ipynb
+++ b/download.ipynb
@@ -13,39 +13,186 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: boto3 in ./venv/lib/python3.11/site-packages (1.34.71)\n",
+      "Requirement already satisfied: python-dotenv in ./venv/lib/python3.11/site-packages (1.0.1)\n",
+      "Requirement already satisfied: botocore<1.35.0,>=1.34.71 in ./venv/lib/python3.11/site-packages (from boto3) (1.34.71)\n",
+      "Requirement already satisfied: jmespath<2.0.0,>=0.7.1 in ./venv/lib/python3.11/site-packages (from boto3) (1.0.1)\n",
+      "Requirement already satisfied: s3transfer<0.11.0,>=0.10.0 in ./venv/lib/python3.11/site-packages (from boto3) (0.10.1)\n",
+      "Requirement already satisfied: python-dateutil<3.0.0,>=2.1 in ./venv/lib/python3.11/site-packages (from botocore<1.35.0,>=1.34.71->boto3) (2.9.0.post0)\n",
+      "Requirement already satisfied: urllib3!=2.2.0,<3,>=1.25.4 in ./venv/lib/python3.11/site-packages (from botocore<1.35.0,>=1.34.71->boto3) (2.2.1)\n",
+      "Requirement already satisfied: six>=1.5 in ./venv/lib/python3.11/site-packages (from python-dateutil<3.0.0,>=2.1->botocore<1.35.0,>=1.34.71->boto3) (1.16.0)\n",
+      "\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m23.3.2\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m24.0\u001b[0m\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n",
+      "Note: you may need to restart the kernel to use updated packages.\n",
+      "Collecting selenium\n",
+      "  Downloading selenium-4.18.1-py3-none-any.whl.metadata (6.9 kB)\n",
+      "Collecting chromedriver-binary\n",
+      "  Downloading chromedriver-binary-125.0.6381.0.0.tar.gz (5.6 kB)\n",
+      "  Preparing metadata (setup.py) ... \u001b[?25ldone\n",
+      "\u001b[?25hRequirement already satisfied: urllib3<3,>=1.26 in ./venv/lib/python3.11/site-packages (from urllib3[socks]<3,>=1.26->selenium) (2.2.1)\n",
+      "Collecting trio~=0.17 (from selenium)\n",
+      "  Downloading trio-0.25.0-py3-none-any.whl.metadata (8.7 kB)\n",
+      "Collecting trio-websocket~=0.9 (from selenium)\n",
+      "  Downloading trio_websocket-0.11.1-py3-none-any.whl.metadata (4.7 kB)\n",
+      "Collecting certifi>=2021.10.8 (from selenium)\n",
+      "  Downloading certifi-2024.2.2-py3-none-any.whl.metadata (2.2 kB)\n",
+      "Collecting typing_extensions>=4.9.0 (from selenium)\n",
+      "  Downloading typing_extensions-4.10.0-py3-none-any.whl.metadata (3.0 kB)\n",
+      "Collecting attrs>=23.2.0 (from trio~=0.17->selenium)\n",
+      "  Downloading attrs-23.2.0-py3-none-any.whl.metadata (9.5 kB)\n",
+      "Collecting sortedcontainers (from trio~=0.17->selenium)\n",
+      "  Downloading sortedcontainers-2.4.0-py2.py3-none-any.whl.metadata (10 kB)\n",
+      "Collecting idna (from trio~=0.17->selenium)\n",
+      "  Using cached idna-3.6-py3-none-any.whl.metadata (9.9 kB)\n",
+      "Collecting outcome (from trio~=0.17->selenium)\n",
+      "  Downloading outcome-1.3.0.post0-py2.py3-none-any.whl.metadata (2.6 kB)\n",
+      "Collecting sniffio>=1.3.0 (from trio~=0.17->selenium)\n",
+      "  Downloading sniffio-1.3.1-py3-none-any.whl.metadata (3.9 kB)\n",
+      "Collecting wsproto>=0.14 (from trio-websocket~=0.9->selenium)\n",
+      "  Downloading wsproto-1.2.0-py3-none-any.whl.metadata (5.6 kB)\n",
+      "Collecting pysocks!=1.5.7,<2.0,>=1.5.6 (from urllib3[socks]<3,>=1.26->selenium)\n",
+      "  Downloading PySocks-1.7.1-py3-none-any.whl.metadata (13 kB)\n",
+      "Collecting h11<1,>=0.9.0 (from wsproto>=0.14->trio-websocket~=0.9->selenium)\n",
+      "  Downloading h11-0.14.0-py3-none-any.whl.metadata (8.2 kB)\n",
+      "Downloading selenium-4.18.1-py3-none-any.whl (10.0 MB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m10.0/10.0 MB\u001b[0m \u001b[31m831.9 kB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m0:01\u001b[0m\n",
+      "\u001b[?25hDownloading certifi-2024.2.2-py3-none-any.whl (163 kB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m163.8/163.8 kB\u001b[0m \u001b[31m997.9 kB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m \u001b[36m0:00:01\u001b[0m\n",
+      "\u001b[?25hDownloading trio-0.25.0-py3-none-any.whl (467 kB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m467.2/467.2 kB\u001b[0m \u001b[31m911.8 kB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
+      "\u001b[?25hDownloading trio_websocket-0.11.1-py3-none-any.whl (17 kB)\n",
+      "Downloading typing_extensions-4.10.0-py3-none-any.whl (33 kB)\n",
+      "Downloading attrs-23.2.0-py3-none-any.whl (60 kB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m60.8/60.8 kB\u001b[0m \u001b[31m934.4 kB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\u001b[36m0:00:01\u001b[0m\n",
+      "\u001b[?25hDownloading PySocks-1.7.1-py3-none-any.whl (16 kB)\n",
+      "Downloading sniffio-1.3.1-py3-none-any.whl (10 kB)\n",
+      "Downloading wsproto-1.2.0-py3-none-any.whl (24 kB)\n",
+      "Using cached idna-3.6-py3-none-any.whl (61 kB)\n",
+      "Downloading outcome-1.3.0.post0-py2.py3-none-any.whl (10 kB)\n",
+      "Downloading sortedcontainers-2.4.0-py2.py3-none-any.whl (29 kB)\n",
+      "Using cached h11-0.14.0-py3-none-any.whl (58 kB)\n",
+      "Building wheels for collected packages: chromedriver-binary\n",
+      "  Building wheel for chromedriver-binary (setup.py) ... \u001b[?25ldone\n",
+      "\u001b[?25h  Created wheel for chromedriver-binary: filename=chromedriver_binary-125.0.6381.0.0-py3-none-any.whl size=8014136 sha256=a51c69a650e315d4985179f3aff528d690e01acb6a8609a866dedee2610dfb09\n",
+      "  Stored in directory: /home/mingnh/.cache/pip/wheels/d1/7b/9b/5b924cf3aaa5a65e3fe2a1101e770a6940847aac94e3570830\n",
+      "Successfully built chromedriver-binary\n",
+      "Installing collected packages: sortedcontainers, chromedriver-binary, typing_extensions, sniffio, pysocks, idna, h11, certifi, attrs, wsproto, outcome, trio, trio-websocket, selenium\n",
+      "Successfully installed attrs-23.2.0 certifi-2024.2.2 chromedriver-binary-125.0.6381.0.0 h11-0.14.0 idna-3.6 outcome-1.3.0.post0 pysocks-1.7.1 selenium-4.18.1 sniffio-1.3.1 sortedcontainers-2.4.0 trio-0.25.0 trio-websocket-0.11.1 typing_extensions-4.10.0 wsproto-1.2.0\n",
+      "\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m23.3.2\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m24.0\u001b[0m\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
    "source": [
-    "%pip install boto3\n",
+    "%pip install boto3 python-dotenv\n",
     "# Libraries maybe you need to install in your environment to use selenium and chromedriver below\n",
-    "# %pip install selenium chromedriver-binary"
+    "%pip install selenium chromedriver-binary"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import os\n",
-    "import boto3"
+    "import boto3\n",
+    "import glob\n",
+    "import time\n",
+    "import pathlib\n",
+    "from selenium import webdriver\n",
+    "from selenium.webdriver import ActionChains\n",
+    "from dotenv import load_dotenv\n",
+    "from zipfile import ZipFile\n",
+    "\n",
+    "\n",
+    "load_dotenv()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Error sending stats to Plausible: error sending request for url (https://plausible.io/api/event): operation timed out\n"
+     ]
+    }
+   ],
    "source": [
     "# The file download processing section should be placed here\n",
     "\n",
-    "#..........................................................."
+    "#...........................................................\n",
+    "# Create working directories\n",
+    "DOWNLOAD_DIR = os.path.join(os.getcwd(), \"data\")\n",
+    "EXTRACT_DIR = os.path.join(DOWNLOAD_DIR, \"extracted\")\n",
+    "pathlib.Path(DOWNLOAD_DIR).mkdir(parents=True, exist_ok=True)\n",
+    "pathlib.Path(EXTRACT_DIR).mkdir(parents=True, exist_ok=True)\n",
+    "\n",
+    "# Change selenium download directory\n",
+    "prefs = {\n",
+    "    \"download.default_directory\": DOWNLOAD_DIR,\n",
+    "    \"download.directory_upgrade\": True,\n",
+    "    \"download.prompt_for_download\": False,\n",
+    "}\n",
+    "options = webdriver.ChromeOptions()\n",
+    "options.add_experimental_option(\"prefs\", prefs)\n",
+    "\n",
+    "# Start selenium\n",
+    "driver = webdriver.Chrome(options=options)\n",
+    "driver.get(\"https://drive.google.com/drive/folders/1EImvKyUQ_iJCfd2h-Dxjn_sqPyDV5tFC?usp=sharing\")\n",
+    "\n",
+    "# Hover zip file to render download link\n",
+    "action_chains = ActionChains(driver)\n",
+    "action_chains.move_to_element(driver.find_element(by=\"css selector\", value=\"div[data-list-item-target][role='gridcell']\"))\n",
+    "action_chains.perform()\n",
+    "\n",
+    "# select download link\n",
+    "download_text_element = driver.find_element(by=\"css selector\", value=\"div[data-list-item-target][role='gridcell'] div[role='link'] > span\")\n",
+    "display_text = download_text_element.get_attribute('innerText')\n",
+    "download_link_element = driver.find_element(by=\"css selector\", value=f\"div[data-list-item-target][role='gridcell'] div[aria-label='{download_text_element.text}'][role='link']\")\n",
+    "download_link_element.click()\n",
+    "\n",
+    "# wait until file existed in download folder\n",
+    "while not os.path.exists(os.path.join(DOWNLOAD_DIR, \"data.zip\")):\n",
+    "    time.sleep(2)\n",
+    "\n",
+    "driver.close()\n",
+    "\n",
+    "\n",
+    "# Extract data files\n",
+    "with ZipFile(os.path.join(DOWNLOAD_DIR, \"data.zip\"), 'r') as zipObj:\n",
+    "   # Extract all the contents of zip file in current directory\n",
+    "   zipObj.extractall(path=EXTRACT_DIR)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,19 +217,21 @@
     "                        config=boto3.session.Config(signature_version='s3v4'),\n",
     "                        verify=False\n",
     "                        )\n",
-    "    s3c.Bucket(minio_bucket).upload_file(file_path, minio_object_name)\n"
+    "    s3c.Bucket(minio_bucket).upload_file(file_path, minio_object_name)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Upload file to minio\n",
-    "upload_file_to_minio('data.json', 'data', 'data-raw/data.json')\n",
-    "upload_file_to_minio('data2.json', 'data', 'data-raw/data2.json')\n",
-    "upload_file_to_minio('data3.json', 'data', 'data-raw/data3.json')"
+    "\n",
+    "data_paths = glob.glob(os.path.join(EXTRACT_DIR, \"*.json\"))\n",
+    "for path in data_paths:\n",
+    "    file_name = path.split(os.sep)[-1]\n",
+    "    upload_file_to_minio(path, 'data', f'data-raw/{file_name}')"
    ]
   }
  ],
@@ -102,7 +251,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.11.2"
   }
  },
  "nbformat": 4,
